# MCT-2025-containers

./: .dockerignore  .env  .gitignore  CMakeLists.txt  DOCS.md  Dockerfile  Dockerfile.db  Dockerfile.dev  Dockerfile.init  Dockerfile.prog  Pipfile  README.md  app.py  compose-Prod.yml  compose.dev.yaml  compose.dev.yml  compose.yaml  compose.yml  config.py  db-init.sh  dev-docker-compose.yaml  docker-compose-dev.yaml  docker-compose-dev.yml  docker-compose-prod.yaml  docker-compose-prod.yml  docker-compose-test.yml  docker-compose.base.yml  docker-compose.dev.yaml  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yaml  docker-compose.yml  dockerfile  endpoints_test.go  env_vars.env  full_clean.sh  go.mod  go.sum  init-db.sh  (+21 more)
.github/: dockerfile  mini_app.py
.github/app/: docker-compose.yml  mini_app.py
.github/workflows/: docker-compose.yml  test-dev.yml  test-prod.yml  test.yml
.ipynb_checkpoints/: docker-compose-checkpoint.yml  pinpong-checkpoint.py
alembic/versions/: 831ab00e4723_initial.py
app/: Dockerfile  Dockerfile.test  __main__.py  api.py  app.py  cache.py  config.py  core.py  db.py  go.mod  go.sum  init_db.Dockerfile  init_db.py  main.go  main.py  main_test.go  model.py  models.py  pytest.ini  req.txt  requirements.txt  setup.cfg  test_main.py  tests.py
app/alembic/: env.py
app/scripts/: init-db.sh
app/tests/: conftest.py  test_app.py
appdir/: Dockerfile  requirements.txt
appdir/app/: app.py  init_db.py
cmd/app/: main.go
compose/: docker-compose.dev.yml  docker-compose.prod.yml
config/: config.go  config_test.go
credentials/: app.env  db.env
db/: db_init.sql  init.sql  initDB.sql
db_init/: Dockerfile  init_db.py
dbinit/: initdb.sh
flask/: Dockerfile  app.py
grafana/provisioning/dashboards/: fastapi-dashboard.json
init/: Dockerfile  init-db.sh  init.sh  init.sql  init_db.py  initdb.sh  initdb.sql
init-db/: init-db.py
init_db/: Dockerfile  init_db.py
internal/delivery/http/: handler.go  handler_devmode_test.go  handler_test.go  router.go  router_test.go
internal/domain/: visit.go
internal/repository/postgres/: visit_repository.go  visit_repository_test.go
internal/repository/redis/: visit_cache.go  visit_cache_test.go
internal/usecase/: visit_usecase.go  visit_usecase_test.go
migration/: Dockerfile  database.py
migration/migrations/: env.py
migration/migrations/versions/: 9012f867cf3a_initial_revision.py
migrations/: init.sql
migrator/: Dockerfile  go.mod  main.go
nginx/: nginx.conf
outdated/: docker-compose.yml
ping-visits/: Cargo.toml  Dockerfile  docker-compose.dev.yml  docker-compose.yaml  docker-compose.yml  init.sql  test-local.sh
ping-visits/.sqlx/: query-46350a168d3947ea3620b4c6d63c4661a92ac3cd357d6214aefc73b43bf212e1.json  query-74351047b776911ca407c36a68cd70e2dbe480dcd62fa3514edd53cdf3e6dbf6.json
ping-visits/src/: app.rs  lib.rs  main.rs
ping-visits/tests/: integration_tests.rs
pingpong/: __init__.py  app.py  db.py  settings.py
pingproject/: asgi.py  settings.py  urls.py  wsgi.py
pkg/postgres/: postgres.go  postgres_test.go
pkg/redis/: redis.go  redis_test.go
prometheus/: prometheus.yml
psql/: init_db.sql
redisdata/: dump.rdb
resources/: db_init  db_init.sql
scripts/: init_db.py  init_db.sh
server/: Dockerfile  __init__.py  entrypoint.sh  main.py  test.py
src/: init.sql  main.cpp  pg_config.py  pg_init.py  pingpong.py
tests/: __init__.py  conftest.py  pytest.ini  test_app.py  test_db.py  test_psql.py  test_settings.py  test_web.py
visitor/: Dockerfile  init_db.py  pytest.ini  requirements.txt  visitor.py
visitor/tests/: test_init_db.py  test_visitor.py
visits/: models.py  tests.py  views.py
visits/migrations/: 0001_initial.py
web/: Dockerfile  __main__.py  app.py  main.py  psql.py  views.py
web_master/: Dockerfile  main.py  requirements.txt
webserver/: Dockerfile  main.py  pyproject.toml
webserver/initdb/: Dockerfile  db.py  initdb.py  pyproject.toml
