[project]
name = "mct-2025-containers"
version = "0.1.0"
description = "Simple ping-pong application"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "asyncpg>=0.30.0,<0.30.1",
    "fastapi>=0.121.1,<0.121.2",
    "pydantic-settings>=2.12.0,<2.13.0",
    "sqlalchemy>=2.0.44,<2.1.0",
    "uvicorn>=0.38.0,<0.38.1",
]
