[package]
name = "ping-visits"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow              = "1.0"
actix-web           = "4.11"
tokio               = { version = "1.48", features = ["macros", "rt-multi-thread"]}
sqlx                = { version = "0.8.6", features = ["postgres", "runtime-tokio", "macros"]}
dotenv              = "0.15"
redis               = { version = "0.32.7", features = ["aio", "tokio-comp"]}
reqwest             = { version = "0.12.24", features = ["json", "rustls-tls", "blocking"] }
rand                = "0.9.2"
