[package]
name = "ping-visits"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow              = "1.0"
actix-web           = "4.11"
tokio               = { version = "1.48", features = ["macros", "rt-multi-thread"]}
sqlx                = { version = "0.7", features = ["runtime-tokio", "postgres", "macros", "uuid", "chrono", "migrate", "tls-rustls"] }
dotenv              = "0.15"
redis               = { version = "0.32.7", features = ["aio", "tokio-comp"]}
reqwest             = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rand                = "0.9.2"
